# rust_essentials

./: .gitignore  Cargo.toml  Readme.md
collections/: From Earth to Moon.txt
collections/src/: challenge_count_words.rs  haspmaps.rs  main.rs  vectors.rs
concurrency/: Cargo.toml
concurrency/src/: async_tokio.rs  lib.rs  threads.rs
crates/collections/: Cargo.toml  test.txt
crates/command_line_arguments/: Cargo.toml
crates/compound_types/: Cargo.toml
crates/concurrency/: Cargo.toml  README.md
crates/data_types/: Cargo.toml  README.md
crates/enums/: Cargo.toml
crates/error_handling/: Cargo.toml
crates/generic_types/: Cargo.toml
crates/higher_lower/: Cargo.toml
crates/input_output/: Cargo.toml  planets.txt  speech.txt
crates/lifetimes/: Cargo.toml  lifetime.md
crates/macros/: Cargo.toml
crates/macros_usages/: Cargo.toml
crates/object-oriented-features/: Cargo.toml
crates/ownership/: Cargo.toml  README.md
crates/package_crate_module/: Cargo.toml
crates/primitive_types/: Cargo.toml  README.md
crates/references/: Cargo.toml
crates/smart_pointers/: Cargo.toml
crates/structs/: Cargo.toml
crates/traits/: Cargo.toml
enums/src/: challenge_represent_location.rs  main.rs  match_with_default_placeholder.rs
error_handling/: Cargo.toml
error_handling/src/: challenge_handle_errors.rs  main.rs
generic_types/: Cargo.toml
generic_types/src/: box_data_type.rs  challenge_sum_boxes.rs  generic_methods.rs  generic_structs.rs  (+1 more)
higher_lower/: Cargo.toml
object-oriented-features/: Cargo.toml
src/: lib.rs  main.rs  smart_pointers.rs
(+123 files in other folders)
