[workspace]
members = ["crates/*", "crates/primitive_types", "crates/data_types"]
default-members = ["crates/smart_pointers"]
resolver = "2"

# https://doc.rust-lang.org/cargo/reference/workspaces.html#the-package-table
[workspace.package]
rust-version = "1.80.0"
version = "0.1.0"
edition = "2021"
license = "mit or apache-2.0"
authors = ["Yong Yu (ypyu@hotmail.com)"]
repository = "https://github.com/yonyu/rust_essentials"

[workspace.dependencies]
